# canvas-wasm

./: Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
module/: canvas.ts  canvas_gradient.ts  cavans_pattern.ts  cjs.ts  context.ts  feature.ts  finalize.ts  font_spec.ts  image.ts  image_data.ts  index.ts  jstypes.ts  logger.ts  matrix.ts  path2d.ts  registry.ts  utils.ts  wasm_bridge.d.ts
src/: canvas.rs  filter.rs  gradient.rs  image.rs  lib.rs  main.rs  path.rs  pattern.rs  surface.rs  texture.rs  typography.rs  utils.rs
src/context/: api.rs  jstypes.rs  mod.rs  recorder.rs
web/: index.html  main.js
