[package]
name = "canvas-wasm"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = ["skia-safe/gl"]

[dependencies]
skia-safe = { version = "0.58.0", features = ["textlayout"]}
gl = "0.14.0"
once_cell = "1.13"
crc = "^3.0"
css-color = "^0.2"
rayon = "^1.5"

# fix local count too large的问题
# [profile.dev]
# opt-level = 1
